# ai-painting

./: .gitignore  LICENSE  README.md  painter.py  pyproject.toml  tapet.py  tinker.py
tapet/: tapet.py
