[tool.poetry]
name = "ai-painting"
version = "0.1.0"
description = ""
authors = ["Dan-Andrei-Iliescu <iliescudanandrei@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.21.2"
tqdm = "^4.62.2"
torch = "^1.9.0"
fire = "^0.4.0"
scikit-learn = "^1.0.1"
scikit-image = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
